--- a/IndoorPositioning.Consumer.Api/Properties/launchSettings.json
+++ b/IndoorPositioning.Consumer.Api/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:62569",
-      "sslPort": 44305
+      "applicationUrl": "http://localhost:48109",
+      "sslPort": 44393
     }
   },
   "profiles": {
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IndoorPositioning.Backend.WebApi": {
+    "IndoorPositioning.Consumer.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
