RasperryPi application development in progress

--- a/IndoorPositioning.Consumer.Api/Properties/launchSettings.json
+++ b/IndoorPositioning.Consumer.Api/Properties/launchSettings.json
@@ -1,30 +1,32 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": false,
     "iisExpress": {
-      "applicationUrl": "http://localhost:48109",
-      "sslPort": 44393
+      "applicationUrl": "http://192.168.1.36:19999",
+      "sslPort": 44385
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/logger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "use64Bit": false,
+      "applicationUrl": "http://192.168.1.36:9999"
     },
     "IndoorPositioning.Consumer.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://192.168.1.36:9999"
     }
   }
 }
