Gateway connection accepted and stored

--- a/IndoorPositioning.Server/appsettings.json
+++ b/IndoorPositioning.Server/appsettings.json
@@ -1,10 +1,10 @@
 {
   "indoorpositioning": {
     "database": {
-      "datasource": "db/indoor-positioning.db"
+      "datasource": "data source=C:\\GitHub\\taneresme\\indoorPositioning\\IndoorPositioning.Server\\db\\indoor-positioning.db;"
     },
     "communication": {
-      "gatewayport": "9000",
+      "gatewayport": "8088",
       "serviceport": "9001"
     }
   }
