--- a/IndoorPositioning.Raspberry.Scanner/IndoorPositioning.Raspberry.Scanner.csproj
+++ b/IndoorPositioning.Raspberry.Scanner/IndoorPositioning.Raspberry.Scanner.csproj
@@ -97,6 +97,7 @@
   <ItemGroup>
     <Compile Include="StartupTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TcpConnector.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
