--- a/IndoorPositioning.UI/packages.config
+++ b/IndoorPositioning.UI/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CenterSpace.NMath" version="6.2.0.46" targetFramework="net461" />
+  <package id="Microsoft.Solver.Foundation" version="3.1.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
 </packages>
